# gridoxide

./: Cargo.toml  PLAN.md  README.md
src/: app.rs  main.rs  samples.rs
src/audio/: engine.rs  mod.rs
src/command/: bus.rs  mod.rs  types.rs
src/event/: log.rs  mod.rs
src/fx/: delay.rs  distortion.rs  filter.rs  mod.rs  reverb.rs
src/mcp/: mod.rs  server.rs  socket.rs
src/project/: mod.rs  renderer.rs
src/sequencer/: clock.rs  mod.rs  pattern.rs
src/synth/: bass.rs  hihat.rs  kick.rs  mod.rs  params.rs  sampler.rs  snare.rs  source.rs
src/ui/: browser.rs  fx.rs  grid.rs  help.rs  mixer.rs  mod.rs  params.rs  song.rs  theme.rs
