[package]
name = "gridoxide"
version = "0.5.0"
edition = "2021"
description = "Terminal EDM Production Studio - A Rust-based step sequencer and synthesizer"
license = "MIT"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Audio
cpal = "0.15"
fundsp = "0.18"

# Serialization (for project files and MCP)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Channels (for audio thread communication)
crossbeam-channel = "0.5"

# Thread-safe shared state
parking_lot = "0.12"

# Error handling
anyhow = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }
